<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_bib">Build It Bigger</string>
    <string name="app_xyzreader">XYZ Reader</string>
    <string name="app_capstone">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
