<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="roboto"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_title"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@id/tv_title"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_spotify"
            android:text="@string/app_spotify"
            android:onClick="appClick"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_scores"
            android:text="@string/app_scores"
            android:onClick="appClick"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_library"
            android:text="@string/app_library"
            android:onClick="appClick"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_bib"
            android:text="@string/app_bib"
            android:onClick="appClick"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_xyzreader"
            android:text="@string/app_xyzreader"
            android:onClick="appClick"/>
        <Button
            android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/btn_capstone"
            android:text="@string/app_capstone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="#fff08c35"
            android:onClick="appClick"/>
    </LinearLayout>

</RelativeLayout>
